app/public/style.css
:root {
    --background: #f0f2f5;
    --boxBackground: #ffffff;
    --button: #1877f2;
    --button-hover: #0C63D4;
    --red: #AC3F35;
    --green: #749c75;
    --boxShadow: 0 1px 2px rgba(0,0,0,0.3);
}

body {
    background: var(--background);
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: Arial, Helvetica, sans-serif;
}

main {
    display: flex;
    align-items: top;
    justify-content: center;
    flex-direction: row;
    width: 100%;
    flex-wrap: wrap;
    padding-bottom: 150px;
}

h1 {
    color: var(--mainBlack);
    font-size: 2.5rem;
}

h2 {
    color: black;
    font-size: 1.5rem;
    margin-bottom: 5px;
    margin-top: 0px;
}

.form-title {
    margin-bottom: 10px;
}

nav {
    display: flex;
}

span {
    height: 100%;
}

ol {
    font-size: 1.5rem;
}

li {
    margin: 5px 0px 5px 0px;
    padding: 2px 0;
    position:relative;
}

label {
    font-size: 1.5rem;
}

form {
    display: flex;
    flex-direction: column;
}

nav .btn {
    margin-left: 0.5vw;
    margin-right: 0.5vw;
    text-decoration: none;
}

.message {
    border: 1px solid;
    border-radius: 5px;
    margin-top: 1.5rem;
    margin-bottom: 0.5rem;
    padding-left: 1rem;
    padding-right: 1rem;
    font-weight: bold;
    box-shadow: var(--boxShadow);
    background-color: #ffffff;
    position: fixed;
    top: 0;
    width: 50%;
    text-align: center;
    max-width: 500px;
}

.message-error {
    color: var(--red);    
}

.message-info {
    color: var(--button);    
}

.message-warning {
    color: #FFC20A;    
}

.message-success {
    color: var(--green);    
}

.mainHeader {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    width: 100%;
    margin-bottom: 20px;
}

.exercise-box {
    color: black;
    background-color: var(--boxBackground);
    padding: 1rem 2rem 2rem 2rem;
    width: 80%;
    margin: 0.5rem 1rem 1rem 1rem;
    height: fit-content;
    border-radius: 5px;
    max-width: 400px;
    min-width: 275px;
    box-shadow: var(--boxShadow);
}

.trainingList {
    padding: 1.5rem 2rem 1rem 2rem;
    align-items: center;
}

.reset-button {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
}

.box-title {
    margin: 0px 0px 15px 0px;
    display: flex;
    justify-content: center;
}

.btn {
    font-size: 1rem;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: bold;
    border-radius: 5px;
    border: none;
    background-color: var(--button);
    color: var(--background);
    padding: 0.6rem 0.5rem 0.6rem 0.5rem;
    text-align: center;
}

.btn:hover {
    background-color: var(--button-hover);
    cursor: pointer;
}

.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%;
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
    flex-direction: column;
    justify-content: center;

  }
  
.modal-content {
    background-color: #fefefe;
    margin: 10% auto; /* 15% from the top and centered */
    padding: 20px;
    width: 80%;
    max-width: 500px;
  }
  
.close {
    color: var(--red);
    float: right;
    font-size: 2rem;
    font-weight: bold;
    margin: 0px 0px 0px 0px;
  }

.close:hover, .close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
  }

.addEx {
      position:fixed;
      bottom: 3rem;
      width: 100%;
  }

.btn-delete {
    width: 100%;
    min-width: 100px;
}

.add-repetitions-form {
    width: 100%;
    justify-content: center;
    flex-direction: row;
}

.btn-count {
    width: 75%;
}

.btn-add-ex {
    width: 25%;
    min-width: 80px;
    margin-left: 10px;
}

.remove-rep {
    position: relative;
    bottom: 5px;
    border: none;
    background: none;
    padding: 0;
    cursor: pointer;
}

/* Style the navigation menu */
.topnav {
    overflow: hidden;
    background-color: #333;
    position: relative;
}
  
/* Hide the links inside the navigation menu (except for logo/home) */
.topnav #myLinks {
    display: none;
}

/* Style navigation menu links */
.topnav a {
    color: white;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
    display: block;
}

/* Style the hamburger menu */
.topnav a.icon {
    background: black;
    display: block;
    position: absolute;
    right: 0;
    top: 0;
}

/* Add a grey background color on mouse-over */
.topnav a:hover {
    background-color: #ddd;
    color: black;
}

/* Style the active link (or home/logo) */
.active {
    background-color: #04AA6D;
    color: white;
}

input[type="text"] {
    height: 30px;
    width: -webkit-fill-available;
}

input[type="password"] {
    height: 30px;
}

input[type="email"] {
    height: 30px;
}


.show {
    animation: fadeIn 0.4s;
    -webkit-animation: fadeIn .4s;
    -moz-animation: fadeIn .4s;
    -o-animation: fadeIn .4s;
    -ms-animation: fadeIn .4s;
}
@keyframes fadeIn {
    0% {opacity:0;}
    100% {opacity:1;}
}

@-moz-keyframes fadeIn {
0% {opacity:0;}
100% {opacity:1;}
}

@-webkit-keyframes fadeIn {
0% {opacity:0;}
100% {opacity:1;}
}

@-o-keyframes fadeIn {
0% {opacity:0;}
100% {opacity:1;}
}

@-ms-keyframes fadeIn {
0% {opacity:0;}
100% {opacity:1;}
}

.hide {
    opacity: 0;
    transition: opacity 400ms;
}

.datetime {
    margin-top: 2px;
}

.trainingLink {
    text-decoration: none;
    color: #000000;
    font-weight: bold;

}

.form-line {
    margin-bottom: 10px;
    display: flex;
    flex-direction: column;
}

.deleteRepForm {
    display: inline;
}

.tags {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    margin-top: 50px;
}

.exTag {
    margin: 5px 5px 5px 5px;
    border: 1px solid;
    text-decoration: none;

}

.blankLink {
    text-decoration: none;
    font-weight: bold;
}

.font-white {
    color: #ffffff;
}

.font-black {
    color: #000000;
}

.btn-add {
    margin-top: 10px;
}

.pcnav {
    display: flex;
}

.arrow {
    border: solid black;
    border-width: 0 3px 3px 0;
    display: inline-block;
    padding: 3px;
    cursor: pointer;
    margin-right: 1.5rem;
}

.arrow:hover {
    border: solid rgb(94, 94, 94);
    border-width: 0 3px 3px 0;
}
  
.arrow-up {
    transform: rotate(-135deg);
    -webkit-transform: rotate(-135deg);
    margin-bottom: 2px;
}

.arrow-down {
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    margin-bottom: 5px;
}

.icons {
    display: inline;
    position: absolute;
    right: 0;
}

#btnAddExercise {
      width: 100%;
      height: 80px;
      font-size: 2rem;
  }

#btnSaveTraining {
    margin-top: 20px;
    margin-bottom: 10px;
    width: 50%;
    min-width: 150px;
    max-width: 250px;
}

@media (max-height: 500px) {
    #btnAddExercise {
      display: none;
    }
  }

